apps/nightingale-lifesaver/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nightingale-lifesaver-backend
  namespace: nightingale-lifesaver
  labels:
    app.kubernetes.io/name: nightingale-lifesaver-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: nightingale-lifesaver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nightingale-lifesaver-backend
  ports:
    - name: api
      port: 3000
      targetPort: api
    - name: rasa
      port: 5005
      targetPort: rasa
