apps/nightingale-lifesaver/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nightingale-lifesaver-frontend
  namespace: nightingale-lifesaver
  labels:
    app.kubernetes.io/name: nightingale-lifesaver-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: nightingale-lifesaver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nightingale-lifesaver-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
